--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
    My Family Book
   </title>
 </head>
+<link rel="stylesheet" href="style.css">
+          <script src="main.js"></script>
+
 
 <body>
-  <p> Save Trees</p>
+  <p> My Family Book</p>
   <img id="album" src="IMG_20200426_144051.jpg">
   <div><button type="button" onclick="nextslide()">Next</button>
   </div>
   <p id="r1">"Geeta Bhatt(Mom)"
 
-    <p> Save Trees</p>
-  <img id="album" src="">
-  <div><button type="button" onclick="nextslide()">Next</button>
-  </div>
-  <p id="r1">"Manoj K Bhatt(Dad)"
-
-    <p> Save Trees</p>
+    <p> My Family Book</p>
   <img id="album" src="WIN_20200611_18_36_27_Pro.jpg">
   <div><button type="button" onclick="nextslide()">Next</button>
   </div>
   <p id="r1">"Elina Bhatt(Me)
+</p>
 
 
 </html>
